[build-system]
requires = ["setuptools>=40.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
atomic = true
include_trailing_comma = true
line_length = 98
lines_after_imports = 2
lines_between_types = 0
multi_line_output = 3
not_skip = '__init__.py'
default_section = 'THIRDPARTY'
known_first_party = ['qualysapi']

