[metadata]
author = Parag Baxi
author_email = parag.baxi@gmail.com
description = Qualys API Helper
description-content-type = text/plain
license_file = license
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paragbaxi/qualysapi
project_urls =
    Bug Tracker = https://github.com/paragbaxi/qualysapi/issues
    Source Code = https://github.com/paragbaxi/qualysapi
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords =
    Qualys
    Qualys API

[options]
install_requires =
    lxml
    requests
packages = qualysapi
package_dir =
    = .
requires-python = >=3.6
